Added dynamic rendering of teachers and deck